Added option to merge all messages from all jabber contact's resources (default enabled)

BUG: 111537
BUG: 142650
BUG: 175078
BUG: 194808

svn path=/trunk/KDE/kdenetwork/kopete/; revision=985395